CS_PROD_20150209_01/Metadata/unpackaged/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>New_Biz_Source__c</fullName>
        <description>Created by LM on 11/18/2013 for Phase 2 rollout</description>
        <label>New Biz Source</label>
        <picklist>
            <picklistValues>
                <fullName>Cold Call Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Referral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>New_Renewal_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 10/31/2013 for Phase 2 rollout</description>
        <label>New Renewal Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Date__c</fullName>
        <description>Created by LM on 9/13/2013 for Phase 2 rollout</description>
        <label>Next Steps Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>Created by LM on 10/1/2013 for Phase 2 rollout</description>
        <label>Next Steps</label>
        <picklist>
            <picklistValues>
                <fullName>Needs Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up Attempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Procurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Attempt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbound Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rescheduled Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal In</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Non_Commissionable_Potential__c</fullName>
        <description>Added by LM on 3/4/2013; From MS CRM</description>
        <inlineHelpText>This total=Last Year&apos;s Renewable Products-Last Year&apos;s Commissionable Products</inlineHelpText>
        <label>Non-Commissionable Potential</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Commissional_Total__c</fullName>
        <label>Non Commissional Total</label>
        <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Commissionable_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Analysis_Services_Products__c</fullName>
        <label>Number of Analysis Services Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Workflow_Analysis_Services_Product__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Managed_Services_Products__c</fullName>
        <label>Number of Managed Services Products</label>
        <summaryFilterItems>
            <field>OpportunityLineItem.Workflow_Managed_Services_Product__c</field>
            <operation>equals</operation>
            <value>1</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Products__c</fullName>
        <label>Number of Products</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Renewable_Products__c</fullName>
        <description>Created by LM on 6/18/2014</description>
        <label>Number of Renewable Products</label>
        <summarizedField>OpportunityLineItem.Renewable_Product__c</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_quotes_that_are_Approved__c</fullName>
        <label>Number of quotes that are Approved</label>
        <summaryFilterItems>
            <field>SBQQ__Quote__c.SBQQ__Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__Quote__c.SBQQ__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_quotes_that_are_Rejected__c</fullName>
        <label>Number of quotes that are Rejected</label>
        <summaryFilterItems>
            <field>SBQQ__Quote__c.SBQQ__Status__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </summaryFilterItems>
        <summaryForeignKey>SBQQ__Quote__c.SBQQ__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>On_Hold_Reason__c</fullName>
        <label>On-Hold Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Research Shipping Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negative Total</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Owner Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Changed_Hands_Date__c</fullName>
        <description>Created by LM on 9/6/2013 for Phase 2 rollout</description>
        <label>Opportunity Changed Hands Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <description>Added by LM on 2/21/2013</description>
        <displayFormat>OP-{0000000}</displayFormat>
        <label>Opportunity Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Opportunity_Shipping_Email__c</fullName>
        <description>Created by LM on 4/28/2014 for Phase2 DocuSign Rollout</description>
        <label>Opportunity Shipping Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Opportunity_Status__c</fullName>
        <description>Added by LM on 2/27/2013; From NetSuite</description>
        <label>Opportunity Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending Sale</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoiced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voided</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order_Instructions__c</fullName>
        <description>Added by LM on 2/21/2013; From NetSuite</description>
        <label>Opportunity Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>For Split Opportunities and Redo Opportunities, put in the Opp Number of the Original Opp.</inlineHelpText>
        <label>Original Opportunity #</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Split Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owners_Profile_When_Opportunity_Created__c</fullName>
        <label>Owners Profile When Opportunity Created</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>P_O_Number__c</fullName>
        <description>Added by LM on 2/21/2013; From NetSuite</description>
        <label>P.O. Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 3/4/2013; From MS CRM</description>
        <label>Package Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passed_to_Softrax__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 12/12/13 for da Phase 2</description>
        <label>Passed to Softrax?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Profile</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.AccountId</field>
                <operation>equals</operation>
                <valueField>fw1__PaymentProfile__c.fw1__Account__r.Id</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>fw1__PaymentProfile__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PinPoint_Notes__c</fullName>
        <description>Added by LM on 2/21/2013; From NetSuite</description>
        <label>PinPoint Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Competitor_Exp_Date__c</fullName>
        <label>Plan Competitor Exp Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Competitor__c</fullName>
        <label>Plan Competitor</label>
        <picklist>
            <picklistValues>
                <fullName>Vocus</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Year_s_Last_Year_Spend__c</fullName>
        <description>Created by LM on 10/11/2013 for Phase 2 rollout</description>
        <inlineHelpText>For assigning Renewals only: this is the Last Year Spend value on the previous year&apos;s Renewal Opp.</inlineHelpText>
        <label>Previous Year’s Last Year Spend</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promo__c</fullName>
        <label>Promo</label>
        <picklist>
            <picklistValues>
                <fullName>HD Promo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Amount__c</fullName>
        <description>Added by LM on 3/4/2013; From MS CRM</description>
        <label>Proposal Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposal_Sent_Date__c</fullName>
        <description>Added by LM on 3/4/2013; From MS CRM</description>
        <label>Proposal Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 9/13/2013 for Phase 2 rollout</description>
        <label>Proposal Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Proposed_Solution_has_been_presented__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Proposed Solution has been presented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Push_Counter__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Created by LM on 10/23/2013 for Phase 2 rollout</description>
        <label>Push Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Payment_Plan__c</fullName>
        <formula>TEXT(SBQQ__PrimaryQuote__r.Payment_Plan__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Payment Plan</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Payment_Terms__c</fullName>
        <formula>TEXT(SBQQ__PrimaryQuote__r.SBQQ__PaymentTerms__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Payment Terms</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Payment_Type__c</fullName>
        <formula>TEXT(SBQQ__PrimaryQuote__r.Payment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quote Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCN_Additional_Recurring_Client_Needs__c</fullName>
        <formula>Account.RCN_Additional_Recurring_Client_Needs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCN: Additional Recurring Client Needs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCN_Client_Emails__c</fullName>
        <formula>Account.RCN_Client_Emails__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCN: Client Emails</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCN_Clip_Format__c</fullName>
        <formula>TEXT(Account.RCN_Clip_Format__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCN: Clip Format</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCN_Incidental_Fee__c</fullName>
        <formula>TEXT(Account.RCN_Incidental_Fee__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCN: Incidental Fee</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCN_Post_Location__c</fullName>
        <formula>TEXT(Account.RCN_Post_Location__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCN: Post Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RCN_Recurring_Client_Needs__c</fullName>
        <description>Added by LM on 2/22/2013; From NetSuite</description>
        <formula>Account.RCN_Recurring_Client_Needs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RCN: Recurring Client Needs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added on 4/18/2013 for Josh Y.</description>
        <label>Ready for Billing?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Added by LM on 3/4/2013; From MS CRM</description>
        <label>Reason - At Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Budget Objection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Threat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (See Notes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Redo_Item_s__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>For Redo Opportunities</inlineHelpText>
        <label>Redo Item(s)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Redo_Reasons__c</fullName>
        <label>Redo Reasons</label>
        <picklist>
            <picklistValues>
                <fullName>Cision error - AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cision error - Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client error - Manager Comp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client error - Format</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Gets checked by the Renewal Process from the Contract</description>
        <label>Renewal Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Due_Date__c</fullName>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Renewal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Rep_Assigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Rep Assigned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Tasks_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is set automatically after all the Renewal Tasks have completed to avoid them being duplicated</description>
        <label>Renewal Tasks Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Type__c</fullName>
        <description>Created by LM on 10/28/2013 for Phase 2 rollout</description>
        <label>Renewal Type</label>
        <picklist>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Route_Date_Time__c</fullName>
        <label>Route Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Route_To_Email__c</fullName>
        <label>Route To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Route_To__c</fullName>
        <label>Route To</label>
        <picklist>
            <picklistValues>
                <fullName>Traffic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Orders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>**CH**</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>**NY**</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>*Trans*</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media Monkey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creat Svcs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DNR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med Rel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WOP - SR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cision Hero</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>National Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-National Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketwired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Renewal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Routing_Time_Hour__c</fullName>
        <label>Routing Time - Hour</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rush_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To communicate to the Operations Team that this is a Rush Order</inlineHelpText>
        <label>Rush Order?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__Contracted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Internal flag used to kick off automatic asset and subscription conversion.</description>
        <inlineHelpText>QuoteQuickly uses this field to automatically convert assets and subscriptions.</inlineHelpText>
        <label>Contracted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__PrimaryQuote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Points to primary quote on this opportunity.</description>
        <inlineHelpText>QuoteQuickly uses this to point to the primary quote on this opportunity.</inlineHelpText>
        <label>Primary Quote</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>SBQQ__Quote__c.SBQQ__Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SBQQ__Quote__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>PrimaryOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteCount__c</fullName>
        <description>Counts the number of quotes for this opportunity.</description>
        <inlineHelpText>Counts the number of quotes for this opportunity.</inlineHelpText>
        <label>Quote Count</label>
        <summaryForeignKey>SBQQ__Quote__c.SBQQ__Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SBQQ__QuotePricebookId__c</fullName>
        <description>Custom pricebook ID field that updates the standard Pricebook2Id field. Use to automatically drive pricebook selection from workflow rules.</description>
        <label>Quote Pricebook Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this opportunity is a renewal opportunity.</description>
        <inlineHelpText>Indicates this opportunity is a renewal opportunity.</inlineHelpText>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__RenewedContract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract being renewed by this renewal opportunity. In case opportunity rolls up several contracts this points at the master contract.</description>
        <inlineHelpText>Contract being renewed by this renewal opportunity. If the several contracts roll up to this opportunity, this points at the master contract.</inlineHelpText>
        <label>Renewed Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Renewal Opportunities</relationshipLabel>
        <relationshipName>RenewalOpportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Last_Touched_Date__c</fullName>
        <description>Created by LM on 5/6/2014 for Phase2</description>
        <label>Sales Last Touched Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Tax__c</fullName>
        <inlineHelpText>This field rolls up all the Sales Tax from all related Broadcast Items.</inlineHelpText>
        <label>Sales Tax</label>
        <summarizedField>Broadcast_Item__c.Tax__c</summarizedField>
        <summaryForeignKey>Broadcast_Item__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Search_Request_Status__c</fullName>
        <label>Search Request Status</label>
        <picklist>
            <picklistValues>
                <fullName>Found</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Found</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Search_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Search Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Services_Interested_In__c</fullName>
        <description>Created by LM on 9/3/2013 for Phase 2 rollout</description>
        <label>Services Interested In</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analysis</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Shipping_Address__c</fullName>
        <label>Shipping Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Company_Name__c</fullName>
        <description>Request from Eric McKeon from SFDC Enhancements &amp; Bug Reports</description>
        <label>Shipping Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Cost__c</fullName>
        <description>Added by LM on 2/26/2013; From NetSuite</description>
        <label>Shipping Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <description>Added by LM on 2/26/2013; From NetSuite</description>
        <label>Shipping Method</label>
        <picklist>
            <picklistValues>
                <fullName>E-mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx: 1st by 8AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx: 2 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx: Alaska/Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx: Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx: Ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx: International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx: Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx: Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FedEx: Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Messenger: RUSH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Locations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pick Up/Drop Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT: DHL/Airborne Ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT: FedEx Ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT: California Overnight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT: DHL/Airborne Next Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT: FedEx 1st by 8AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT: FedEx 2 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT: FedEx 3 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT: FedEx Alaska-Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT: FedEx Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT: FedEx International</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT: FedEx Priority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT: FedEx Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT: FedEx Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT: Messenger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT: UPS 2 Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLIENT: UPS Ground</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Tracking__c</fullName>
        <label>Shipping Tracking #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip__c</fullName>
        <label>Shipping Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Slow_Moving_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by LM on 8/31/2013 for Phase 2 rollout</description>
        <label>Slow Moving Account</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>